2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grops/psrm.cpp
	(resource_manager::read_download_file): Align diagnostic message
	wording with gropdf in the same circumstance.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Throw warning in font category when a font selection
	escape sequence is used after the output line continuation
	escape sequence on an input line, because it is ignored.

	* src/roff/troff/env.cpp (environment::set_font): Do it.

	* doc/groff.texi (Warnings):
	* src/roff/troff/troff.1.man (Warnings): Document it.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (font_change): Boolify.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl (LoadFont): Revise error message
	when a font can't be found for embedding.  User failure to add
	an entry for locating the font file seems a more likely scenario
	than outright corruption of the file.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (font_change): Warn upon selection of a
	nonexistent font name.

	Fixes <https://savannah.gnu.org/bugs/?62656>.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Revise `environment::set_font` to return Boolean value
	indicating success of font selection operation.

	* src/roff/troff/env.cpp (environment::set_font):
	* src/roff/troff/env.h (environment::set_font): Do it.

	This prepares the way for a fix for Savannah #62656.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp: Use single exit path, freeing
	memory allocated for strings.
	(xexit): Add `exit()` wrapper; free allocated memory.
	(main): Use it in all three exit paths.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp: Refactor to be more meticulous with
	memory.  Add globals `saved_path`, `groff_bin_path`, and